project card spacing fix

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -28,6 +28,7 @@
   }
 
   .button-container {
-    padding-bottom: 1rem;
+    padding-bottom: .5rem;
+    height: 32vh;
   }
 }
