--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -8,10 +8,13 @@
 
 #card-main {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   height: 100vh;
   overflow: scroll;
-  padding-left: 1rem;
+  margin-right: -8px;
+  /* padding-left: 8px; */
   width: 100vw;
   /* padding-right: 1rem; */
   padding-bottom: 1rem;
@@ -29,7 +32,7 @@
 .proj-img {
   /* height: 16rem; */
   top: 0;
-  width:100%;
+  width: 100%;
   height: 16rem;
   margin: 0;
   /* object-fit: cover; */
@@ -98,6 +101,7 @@
   background-color: transparent;
   box-shadow: 5px 10px;
   font-family: "Roboto Condensed", sans-serif;
+  margin-right: 8px;
 }
 
 /* iPhone XR, Galaxy s20, Ipad Air, Ipad Mini, Surface pro 7, Galaxy A51*/
@@ -105,11 +109,12 @@
   #card-main {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    overflow: scroll;
+    justify-content: center;
+    align-items: center;
+    overflow-x: scroll;
     margin: 0;
     width: 100vw;
-    height: 73%;
+    height: 69vh;
     padding-left: 0rem;
     padding-right: 0rem;
     /* padding-bottom: 4.5rem; */
@@ -128,6 +133,8 @@
 
   #card {
     width: 100%;
+    margin-right: 0px;
+    margin-left: -2px;
   }
 
   .link {
